[package]
name = "jippigy"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Compress JPEG while preserving exif data. Provides multi-threaded method for compressing in bulk."
categories = ["multimedia::images"]
repository = "https://github.com/rfdzan/jippigy"
keywords = ["turbojpeg", "jpeg", "compress", "image", "exif"]
readme = "README.md"
exclude = ["src/main.rs"]

[dependencies]
crossbeam = "0.8.4"
image = "0.24.9"
img-parts = "0.3.0"
thiserror = "1.0.58"
turbojpeg = {version = "1.0", features = ["image"]}
